<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.CarFragment">

<!--Marca-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_marca"
        android:layout_width="378dp"
        android:layout_height="53dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nameMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marca"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>


<!--Modelo-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_modelo"
        android:layout_width="373dp"
        android:layout_height="55dp"
        android:layout_marginTop="168dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nameModelo"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:hint="@string/modelo"
            android:inputType="textCapSentences"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="175dp" />

    </com.google.android.material.textfield.TextInputLayout>

<!--Matricula-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_matricula"
        android:layout_width="387dp"
        android:layout_height="55dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_nameMatricula"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/matricula"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="250dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="616dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
